Fix color of cancel in custom procedure prompt in dark mode

--- a/src/components/custom-procedures/custom-procedures.css
+++ b/src/components/custom-procedures/custom-procedures.css
@@ -111,3 +111,7 @@
 [dir="rtl"] .button-row button + button {
     margin-right: 0.5rem;
 }
+
+.cancel-button {
+    color: black;
+}
